--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div style="display: flex">
           <div class="box">
             <h3>Project 1</h3>
+            <a href="project1.html">Click Here</a>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
               quia nobis eligendi reiciendis. Esse a possimus eum est veritatis
@@ -63,6 +64,7 @@
 
           <div class="box">
             <h3>Project 2</h3>
+            <a href="mybank/index.html">Click Here</a>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
               quia nobis eligendi reiciendis. Esse a possimus eum est veritatis
