--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
           <div class="box">
             <h3>Project 3</h3>
+            <a href="mystore/index.html">Click Here</a>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
               quia nobis eligendi reiciendis. Esse a possimus eum est veritatis
